# facedetectevaluation

./: .gitignore  CMakeLists.txt
systest/: evaluate.cpp
